Fixed bug: after 20 test runs, the 21st run did not appear in history.